; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/nes/ntsc/extr_demo.c_sdl_lock_pixels.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/nes/ntsc/extr_demo.c_sdl_lock_pixels.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@surface = common dso_local global %struct.TYPE_3__* null, align 8
@.str = private unnamed_addr constant [22 x i8] c"Couldn't lock surface\00", align 1
@sdl_pitch = common dso_local global i32 0, align 4
@sdl_pixels = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sdl_lock_pixels() #0 {
  %1 = load %struct.TYPE_3__*, %struct.TYPE_3__** @surface, align 8
  %2 = call i64 @SDL_LockSurface(%struct.TYPE_3__* %1)
  %3 = icmp slt i64 %2, 0
  br i1 %3, label %4, label %6

4:                                                ; preds = %0
  %5 = call i32 @fatal_error(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  br label %6

6:                                                ; preds = %4, %0
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** @surface, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  store i32 %9, i32* @sdl_pitch, align 4
  %10 = load %struct.TYPE_3__*, %struct.TYPE_3__** @surface, align 8
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = inttoptr i64 %12 to i8*
  store i8* %13, i8** @sdl_pixels, align 8
  ret void
}

declare dso_local i64 @SDL_LockSurface(%struct.TYPE_3__*) #1

declare dso_local i32 @fatal_error(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
